# joulegl

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  pytest.sh  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: pytest-cov.yaml  release.yaml
demo/balls/: balls.py
demo/balls/shader/: ball_impostor.vert  ball_noise.comp  basic.frag  basic.vert  point_to_ball_impostor.geom  sphere.frag
demo/block/: block.py
demo/block/shader/: block_impostor.vert  dual_light.frag  point_to_block_impostor.geom
joulegl/opengl_helper/: buffer.py  frame_buffer.py  screenshot.py  texture.py  vertex_data_handler.py
joulegl/opengl_helper/base/: config.py  data_set.py  shader.py  shader_handler.py  shader_parser.py
joulegl/opengl_helper/compute/: shader.py  shader_handler.py
joulegl/processing/: processor.py
joulegl/rendering/: renderer.py
joulegl/utility/: app.py  camera.py  config.py  definitions.py  file.py  glcontext.py  input_handler.py  log_handling.py  performance.py  singleton.py  window.py  window_config.py
tests/: .coveragerc  conftest.py
tests/opengl_helper/: test_buffer.py  test_vertex_data_handler.py
tests/processing/: test_processor.py
tests/rendering/: test_renderer.py
tests/shader/: noise.comp  screen_quad.frag  screen_quad.vert  screen_quad_color.frag  screen_quad_color.vert  screen_quad_geom.geom  screen_quad_geom.vert  test_shader_parser_error.vert  uniform_test.vert
tests/utility/: test_app.py  test_camera.py  test_definitions.py  test_file.py
(+12 files in other folders)
